packages/jsii/test/negatives/neg.property-name.2.ts
///!MATCH_ERROR: ERROR 'my_Prop' must use camelCase

export class MyClass {
    my_Prop?: number;
}
